To Parson's, Makaio's work is in mak_work

--- a/mak_work/pyproject.toml
+++ b/mak_work/pyproject.toml
@@ -8,4 +8,4 @@ classifiers = ["Programming Language :: Python :: 3" "Operating System :: OS Ind
 lisence = "MIT"
 
 [project.urls]
-Homepage = 
+Homepage = "
